# Scenic

./: .gitignore  CLAUDE.md  Makefile  README.md  params.yaml  pyproject.toml
docs/: CONTRACTS.md  index.html  scene.sog  viewer.js
fixtures/: COMPLIANT_PANO.md  ci_tiny.jpg.license.json
gates/: __init__.py  budgets.py  fidelity.py  hole.py  jitter.py  people.py  stereo.py
pipeline/: registry.py  s0_ingest.py  s1_cleanplate.py  s2_depth.py  s2b_scale.py  s3_layers.py  s4_place.py  s6_compress.py  s7_gates.py  s8_review.py
scenic/: determinism.py  geometry.py  hashing.py  imageio.py  manifest.py  metrics.py  params.py  plyio.py  rasterizer.py  receipts.py  run.py  schema.py  stage.py  weights.py
schemas/: accepted.schema.json  cleanplate.schema.json  compress.schema.json  depth_meta.schema.json  gate_verdict.schema.json  layers.schema.json  license_sidecar.schema.json  manifest.schema.json  pano_meta.schema.json  person_boxes.schema.json  pins.schema.json  receipt.schema.json  review.schema.json  scale.schema.json  splats_meta.schema.json  watermark.schema.json
tests/: test_accept.py  test_determinism_unit.py  test_fixtures.py  test_geometry.py  test_hashing.py  test_manifest_coherence.py  test_no_network_guard.py  test_plyio.py  test_rasterizer.py  test_receipts.py  test_run_harness.py  test_s0.py  test_s1.py  test_s2.py  test_s2b.py  test_s3.py  test_s4.py  test_s6.py  test_s7.py  test_s8.py  test_sweep.py
tools/: accept_run.py  check_no_network.py  compare_runs.py  fetch_weights.py  license_guard.py  make_fixtures.py  sweep.py
weights/: LICENSES.md  (+1 more)
(+3 files in other folders)
