[project]
name = "scenic"
version = "0.1.0"
description = "Deterministic pano -> layered Gaussian-splat scenic bubble pipeline with provenance receipts"
requires-python = ">=3.12,<3.13"
dependencies = [
    "numpy>=2.0,<3",
    "pillow>=11,<12",
    "scipy>=1.14,<2",
    "jsonschema>=4.23,<5",
    "pyyaml>=6,<7",
    "torch>=2.6,<2.8",
    "transformers>=4.48,<5",
    "safetensors>=0.5,<1",
]

[dependency-groups]
dev = ["pytest>=8,<9"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["scenic", "pipeline", "gates"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
